k8s/2-things.yml
apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: '5'
    labels: null
    name: things
    namespace: mainflux
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels: null
    strategy:
      rollingUpdate:
        maxSurge: 1
        maxUnavailable: 0
      type: RollingUpdate
    template:
      metadata:
        annotations: null
        labels:
          app: things
      spec:
        containers:
        - env:
          - name: MF_THINGS_CACHE_URL
            value: redis-things-master.mainflux-redis:6379
          - name: MF_THINGS_DB
            value: things
          - name: MF_THINGS_DB_HOST
            value: postgresql-things-iotfuse-postgresql.mainflux-postgresql
          - name: MF_THINGS_DB_PASS
            value: mainflux
          - name: MF_THINGS_DB_PORT
            value: '5432'
          - name: MF_THINGS_DB_USER
            value: mainflux
          - name: MF_THINGS_ES_URL
            value: redis-streams-master.mainfux-redis:6379
          - name: MF_THINGS_GRPC_PORT
            value: '8183'
          - name: MF_THINGS_HTTP_PORT
            value: '8182'
          - name: MF_THINGS_LOG_LEVEL
            value: debug
          - name: MF_THINGS_SECRET
            value: secret
          - name: MF_USERS_URL
            value: users:8181
          image: mainflux/things:latest
          imagePullPolicy: Always
          name: things
          ports:
          - containerPort: 8182
            name: 8182tcp02
            protocol: TCP
          - containerPort: 8183
            name: 8183tcp02
            protocol: TCP
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities: {}
            privileged: false
            procMount: Default
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          stdin: true
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          tty: true
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
