k8s/4-normalizer.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: '3'
  labels: null
  name: normalizer
  namespace: mainflux
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels: null
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: 'false'
      labels:
        app: normalizer
    spec:
      containers:
      - env:
        - name: MF_NATS_URL
          value: nats://nats-nats-client.mainflux-nats:4222
        - name: MF_NORMALIZER_LOG_LEVEL
          value: debug
        - name: MF_NORMALIZER_PORT
          value: '8184'
        image: mainflux/normalizer:latest
        imagePullPolicy: Always
        name: normalizer
        ports:
        - containerPort: 8184
          name: 8184tcp02
          protocol: TCP
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities: {}
          privileged: false
          procMount: Default
          readOnlyRootFilesystem: false
          runAsNonRoot: false
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
