k8s/5-ingress-http-ws.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: '"true"'
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/secure-backends: '"true"'
  labels: null
  name: mainflux-redirect
  namespace: mainflux
spec:
  rules:
  - host: k8s-dev.mainflux.com
    http:
      paths:
      - backend:
          serviceName: ws-adapter
          servicePort: 8186
        path: /ws
      - backend:
          serviceName: http-adapter
          servicePort: 8185
        path: /http
  tls:
  - hosts:
    - iotfuse2019.mainflux.com
    secretName: iotfuse2019-mainflux-com-tls
